[gd_scene load_steps=4 format=3 uid="uid://sa1m71g8fyjv"]

[ext_resource type="Script" uid="uid://d0epurv4f5irl" path="res://ui/game_ui.gd" id="1_7hrjk"]
[ext_resource type="LabelSettings" uid="uid://ci7xddmhoa7jk" path="res://resources/game_ui.tres" id="1_dcmab"]
[ext_resource type="AudioStream" uid="uid://jvg4j101h1ch" path="res://assets/audio/jazzyfrenchy.mp3" id="2_w46tp"]

[node name="GameUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_7hrjk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 10
"
label_settings = ExtResource("1_dcmab")

[node name="AttemptsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Attempt 10
"
label_settings = ExtResource("1_dcmab")

[node name="VBGameOver" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LevelLabel2" type="Label" parent="MarginContainer/VBGameOver"]
layout_mode = 2
size_flags_horizontal = 4
text = "Level Complete"
label_settings = ExtResource("1_dcmab")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_w46tp")
volume_db = -20.0
autoplay = true
